Only create the clip preview when the image from clip widget is shown

BUG:443183
(cherry picked from commit c0785aafac25d74465a06ebdfd3ff17832911554)