libs/ui/widgets/kis_custom_image_widget.h
@@ -77,15 +77,17 @@ protected:
     /// Set the number of layers that will be created
     void setNumberOfLayers(int layers);
 
+    void showEvent(QShowEvent *) override;
+
     KisOpenPane *m_openPane;
 private:
-    
+
     double m_width, m_height;
     quint8 backgroundOpacity() const;
     void setBackgroundOpacity(quint8 value);
 
     void fillPredefined();
-    void showEvent(QShowEvent *) override;
+
     
     KoUnit m_widthUnit, m_heightUnit;
     QList<KisPropertiesConfigurationSP> m_predefined;
